reading second pass

--- a/paper/incl_model2.tex
+++ b/paper/incl_model2.tex
@@ -1,36 +1,38 @@
 %!TEX root = main.tex
 \section{Material, Structure, and Evolution}
 
-In this section, we introduce two one-dimensional fracture models for a brittle thin film bonded to substrates with different mechanical properties, providing a framework to investigate the evolution and stability of crack patterns under external loading as simple scenarios where multiplicity of solutions, equilibrium bifurcations, and stability transitions...
+Two one-dimensional fracture models for a brittle thin film bonded to substrates with different mechanical properties provide a framework to investigate the evolution and stability of crack patterns under external loading, in a  simple scenario where multiplicity of solutions, equilibrium bifurcations, and stability transitions interplay.
 
 
 \paragraph{Material Model}
-We consider a one-dimensional brittle material modelled by a state function $W(e, \alpha, \alpha')$ which, at any point $x$,%
+We consider a one-dimensional brittle material modelled by a state function $W(e, \alpha, \alpha')$ which, at any point $x$,
 % The displacement field of the thin film is denoted by $u(x)$ and the corresponding strain field is $\epsilon(x) = u'(x)$.
-depends on the local membrane strain associated to in-plane displacements $e = u'(x)$, the local damage $\alpha(x)$, and the local gradient of the damage $\alpha'(x)$. Here, the damage variable $\alpha$ is a scalar field driving material softening, bounded between zero and one, where $0$ indicates the undamaged material and $1$, the cracked material. Thus, at points where $\alpha=0$ the material is elastic with a stiffness $\mathsf{E}$ (its Young modulus), at points where $\alpha=1$ the material has a crack and zero residual stiffness, whereas for intermediate damage values the material's stiffness is $0<\mathsf{E}\soften(\alpha)< \mathsf{E}$.  
+depends on the local membrane strain $e(x)$ (associated to in-plane displacements $u(x)$, namely $e(x) = u'(x)$), the local damage $\alpha(x)$, and the local gradient of the damage $\alpha'(x)$. 
+Here, the damage variable $\alpha$ is a scalar field driving material softening, bounded between zero and one, where $0$ indicates the undamaged material and $1$, the cracked material. Thus, at points where $\alpha=0$ the material is elastic with a stiffness $\mathsf{E}$ (its Young modulus), at points where $\alpha=1$ the material has a crack and zero residual stiffness, whereas for intermediate damage values the material's stiffness is $0<\mathsf{E}\soften(\alpha)< \mathsf{E}$.  
 The state function $W$ is defined as 
 \begin{equation}
     \label{def:energy_material}
     W(e, \alpha, \alpha'):= \frac{1}{2} \mathsf{E} \soften(\alpha)e^2 + W_1\homogdiss(\alpha) + \frac{\damagell^2}{2}\alpha'^2,
 \end{equation}
 where $\homogdiss(\alpha)$ can be interpreted as the energy dissipated during an homogeneous damaging process, COMPUNDS A term that is proportional to the square of its gradient and controls the energy cost of spatial damage variations. In the first summand, $\soften(\alpha)$ is the function that describes the material softening. %
-For physical consistency, $\soften(\alpha)$ is a non-negative function that is one when $\alpha=0$ and monotonically decreases as $\alpha\to 1$, reaching zero for $\alpha=1$ The damage-dependent stress IS $\sigma(\alpha):=\mathsf{E}a(\alpha) e$. 
-On the other hand, $\homogdiss(\alpha)$ is a non-negative function that is zero ONLY IF $\alpha=0$ and monotonically increases with $\alpha$, reaching $\homogdiss(1)=1$. The parameter $\damagell$ is a characteristic length that controls the competition between localisation and homogeneous damage, effectively controlling the width of damage localisations. The (positive) parameter $\ell$ is a characteristic length of the underlying material that controls the peak stress of the material in one-dimensional traction experiments.
-Specifically, the function $\soften(\alpha)$ is chosen to be a quadratic function of the form $\soften(\alpha) = (1-\alpha)^2$, and $\homogdiss(\alpha)$ to be a quadratic, namely $\homogdiss(\alpha) = \mathsf{w_1}\alpha^2$. Both are common choices in phase-field fracture models (cf.~\cite{Bourdin2000-pc,Miehe2010-sj,Miehe2010-ja}), bearing consequences on the damage nucleation threshold.
+For physical consistency, $\soften(\alpha)$ is a non-negative function that is one when $\alpha=0$ and monotonically decreases as $\alpha\to 1$, reaching zero for $\alpha=1$  
+On the other hand, $\homogdiss(\alpha)$ is a non-negative function that is zero ONLY IF $\alpha=0$ and monotonically increases with $\alpha$, reaching $\homogdiss(1)=1$. 
+The damage-dependent stress IS $\sigma(\alpha):=\mathsf{E}a(\alpha) e$. The parameter $\damagell$ is a characteristic length that controls the competition between localisation and homogeneous damage, effectively controlling the width of damage localisations, the peak stress of the material in one-dimensional traction experiments, and - more in general - structural size effects.
+Specifically, the function $\soften(\alpha)$ is chosen to be a quadratic function of the form $\soften(\alpha) = (1-\alpha)^2$, and $\homogdiss(\alpha)$ to be a quadratic, namely $\homogdiss(\alpha) = \mathsf{w_1}\alpha^2$. Both are common choices in phase-field fracture models (cf.~\cite{Bourdin2000-pc,Miehe2010-sj,Miehe2010-ja}), bearing consequences on the damage material behaviour and the properties of the evolutions.
 
 
 
 
 \paragraph{Structural Model}
-The structure under consideration is a multilayer composite constituted by a brittle thin film  made of the material characterised by the state function $W$, attached to an underlying substrate which is either rigid or elastically compliant. The thin film is modelled as a one-dimensional membrane with thickness $h$ and length $L$ with $L\gg h$, and is subject to a monotonic, uniform, imposed inelastic tensile strain $\bar\epsilon_t$. 
+The structure under consideration is a multilayer composite constituted by a brittle thin film  made of the material identified by the state function $W$, attached to an underlying substrate which is either rigid or elastically compliant. The thin film is modelled as a one-dimensional membrane with thickness $h$ and length $L$ with $L\gg h$, and may be subject to a monotonic, uniform, imposed inelastic tensile strain $\bar\epsilon_t$, an imposed displacement by the substrate, and loadings at the boundary. 
 % 
 The substrate is modelled as a one-dimensional elastic foundation WHOSE displacement field IS $v(x)$ AND strain field is $e(v) = v'(x)$. 
 % 
-The displacement field of the substrate WHICH IS elastically compatible to its strain, is the linear function $v(x, t) = \bar\epsilon/2 (2x-1) t$, where $\bar\epsilon$ is the applied tensile strain rate and $t$ plays the role of a loading time parameter. 
+The displacement field of the substrate WHICH IS elastically compatible to the homogeneous strain, is the linear function $v(x, t) = \bar\epsilon/2 (2x-1) t$, where $\bar\epsilon$ is the applied tensile strain rate and $t$ plays the role of a loading time parameter. 
 % 
 The structure's reference configuration is the interval $(0, L)$. The film is subjected to a DISTRIBUTED ELASTICALLY  compatible  tensile imposed LOAD $v(x, t)$ AND displacements at its free ends $x = 0, L$, so that for all $t$, $u(0)=v(0, t)$ and $u(L)=v(L, t)$
 % 
-Our first model describes a brittle thin film deposited on a stiff, non-deformable substrate. This model assumes the substrate is rigid, meaning it does not undergo any deformations regardless of the loading conditions, so that $v$ is a given datum. The elastic interaction is modelled by a distributed linear elastic foundation of stiffness $K$, thus
+Our first model describes a brittle thin film deposited on a stiff, non-deformable substrate. This model assumes the substrate is rigid, meaning, $v$ is a given. The elastic interaction is modelled by a distributed linear elastic foundation of stiffness $K$, thus
 % , so that the energy of the structure is given by
 the total energy of the structure is a functional $\Estiff$ constructed by considering the energy of the thin film and the energy associated to the mechanical coupling between the film and the substrate. In nondimensional form, it is given by
 
@@ -42,7 +44,7 @@ the total energy of the structure is a functional $\Estiff$ constructed by consi
      \right] dx,
 \end{equation}
 WHERE $\Lambda^2 = \frac{E_{\text{eff}}}{K}$, $E_{\text{eff}}$ being the effective stiffness of the membrane.
-Our second model involves the same brittle thin film but a \emph{compliant} elastic substrate that undergoes deformation alongside the film. Unlike for the rigid substrate, the substrate's deformation is an additional unknown which affects the overall energy landscape of the system, incorporating an extra term accounting for the strain energy of the substrate. AS IT WILL BE SEEN LATER, AFFECTING THE UNIQUENESS OF THE EVOLUTION PATHS. 
+Our second model involves the same brittle thin film but a \emph{compliant} elastic substrate that undergoes deformation alongside the film. Unlike for the rigid substrate, the substrate's deformation is an additional unknown which affects the overall energy landscape of the system, incorporating an extra term accounting for the strain energy of the substrate. 
 The state of this structure is identified by the triplet $y:=(u, \alpha, v)$, and the nondimensional energy of the compliant system  $\Ecompl(\alpha, u, v)$ reads
 
 \begin{equation}
@@ -55,7 +57,7 @@ The state of this structure is identified by the triplet $y:=(u, \alpha, v)$, an
 
 % Dimensional parameters
 
-Nondimensional constants appearing in the expression of the energies can be related the three-dimensional parameters of a phyisical mechanical system by an appropriate de-scaling, remarking that the reduced elastic model~\eqref{def:energy_stiff} can be obtained as an asymptotic limit starting from a thin multilayer system in 3d elasticity, as shown in ...
+Nondimensional constants appearing in the expression of the energies can be related the three-dimensional parameters of a phyisical mechanical system by an appropriate de-scaling, remarking that the reduced elastic model~\eqref{def:energy_stiff} can be obtained as an asymptotic limit starting from a thin multilayer system in 3d elasticity, as shown in~\cite{Baldelli2015}
 % , \mathsf{E'_\text{2d}}
 Thus, denoting by $\mathsf{E_\text{2d}}$ the two-dimensional stiffness of the thin film membrane (per unit depth), and by a prime sign the stiffness and thickness of the substrate, the nondimensional quantities appearing in the expression of the energy depend on the geometric the elastic properties of the system as follows
 \begin{equation}
@@ -71,7 +73,7 @@ while spatial variables and physical displacements are respectively normalised w
 
 % Functional setting
 
-Denoting for brevity $y:=(u, \alpha)$ (and $y:=(u, \alpha, v)$) the mechanical state of the stiff (respectively, compliant) model system, and by $H^1(0, 1)$ the (Sobolev) space of scalar functions defined on the unit interval which are square integrable and have square integrable first derivatives, the energy $\Estiff(y)$ is well-defined for pairs belonging in the Cartesian vector product space $V:=H^1(0,1)\times  H^1(0,1)$. Similarly, the energy $\Ecompl(y)$ is well-defined for triplets $(u, \alpha, v)$ in $\widetilde V:=V\times  H^1(0,1)$. In both cases, we extend the value of the total energy to $+\infty$ whenever $\alpha < 0$ or $\alpha > 1$ without renaming the functional.
+Denoting for brevity $y:=(u, \alpha)$ (and $y:=(u, \alpha, v)$) the mechanical state of the stiff (respectively, compliant) model system, as well as by $H^1(0, 1)$ the (Sobolev) space of scalar functions defined on the unit interval which are square integrable and have square integrable first derivatives. The energy $\Estiff(y)$ is well-defined for pairs belonging in the Cartesian vector product space $V:=H^1(0,1)\times  H^1(0,1)$. Similarly, the energy $\Ecompl(y)$ is well-defined for triplets $(u, \alpha, v)$ in $\widetilde V:=V\times  H^1(0,1)$. In both cases, we extend the value of the total energy to $+\infty$ whenever $\alpha < 0$ or $\alpha > 1$ without renaming the functional.
 % The energy functionals are coercive, lower semi-continuous, and nonconvex.
 
 % \subsection{Thin Film on Stiff Substrate}
@@ -110,12 +112,12 @@ Denoting for brevity $y:=(u, \alpha)$ (and $y:=(u, \alpha, v)$) the mechanical s
 Assuming small enough loading rates, 
 the evolution problem of the structure can be cast in an energetic variational formulation as an incremental rate-indipendent quasi-static process driven by an energy-minimality principle.
 Optimality conditions defining this problem are derived from the
-intuitive idea that a state is observable (if and) only if it is stable, and in turn, a state is stable only if it is a local minimum of the energy among admissible state perturbations, FOR EACH GIVEN LOADING CONDITION. 
+intuitive idea that a state is observable (if and) only if it is stable, and in turn, a state is stable only if it is a local minimum of the energy among admissible state perturbations, at fixed load. 
 
 Differently from dissipative evolutions driven by an energy gradient flow whereby a system \emph{reaches} equilibrium conditions through a gradient descent process parametrised by an internal timescale, the quasi-static evolution we consider is a sequence of \emph{attained} equilibrium states as a necessary condition for local energy minimality. 
 The rate-indipendency further implies that the system does not exhibit internal timescales.
 As such, energy minimisation is performed at any given value of the load, and at each increment of the external load its configuration evolves subject to imposed boundary conditions and possible internal constraints.
-With the assumption that the loading process is slow enough for inertia and dynamic effects to be negligible, this evolutionary model not only leads to identyfing a sequence of equilibrium configurations as critical states, also to the determination of the stability of these configurations, and to THE IDENTIFICATION OF the trajectories through which the system transitions between different equilibrium branches.
+With the assumption that the loading process is slow enough for inertia and dynamic effects to be negligible, this evolutionary model leads to identyfing a sequence of equilibrium configurations as critical states, to determinate the stability of these configurations, and to  IDENTIFY the trajectories through which the system transitions between different equilibrium states.
 % 
 % so that the damage process is quasi-static, and the evolution of the damage variable is governed by the principle incremental energy minimality, stating that the state of the system evolves in such a way that the total energy of the system is minimised, subject to the imposed loads, among admissible configurations (or, equivalently, with respect to admissible perturbations).
 
@@ -141,7 +143,7 @@ The admissibility of state competitors explicitly depends on the loading paramet
 In the first case, as damage can evolve freely within the interval $[0, 1]$, all admissible states in $X_t$  (respectively, in $\widetilde{X_t}$) are also admissible competitors. 
 In the second case, the damage field is subject to the pointwise irreversibility constraint $\dot \alpha(x)\geq 0, \forall x\in [0, 1]$, requiring that the damage can only increase or stay constant. 
 As a consequence, irreversibility restricts the admissible set of competitors to the set $K^+_{\alpha_t}:=H^1(0, 1) \times \{\beta\in H^1(0, 1): \beta\geq \alpha_t\}$ (respectively, $\widetilde{K^+_{\alpha_t}}:=K^+_{\alpha_t}\times H^1(0, 1)$), where $\alpha_t$ is the damage field at time $t$, IN TURN, UNKNOWN AT TIME $t$. In the irreversible case the set of admissible competitor states depends explicitly on the entire history of the evolution through the current damage field.
-To draw the attention to the consequences of irreversibility on the system's transitions between different equilibrium states, both in the fully reversible case and in the presence of irreversible damage, we develop the global variational inequality~\eqref{eq:variational_global_ineq} (and the analogous for the compliant model) by expanding the energy around the state $y_t$ by the  introduction of admissible perturbations. 
+To draw the attention to the consequences of irreversibility on the system's transitions between different equilibrium states, both in the fully reversible case and in the presence of irreversible damage, we develop the global variational inequality~\eqref{eq:variational_global_ineq} (and the analogous for the compliant model) by expanding the energy around the state $y_t$ with admissible perturbations. 
 In the fully reversible case they belong to the linear space $X_0$ associated to $X_t$ (respectively, $\widetilde{X_t}$), whereas in the irreversible case they are bound to the closed, pointed, convex cone $K^+_0$ (respectively, $\widetilde{K^+_0}$).
 
 An energy expansion for a generic (admissible) $y$ in the vicinity the state $y_t$ reads
@@ -181,7 +183,7 @@ Solutions to the incremental evolutionary problem are sought by solving first an
 % Provided a given initial condition $y_0$ at $t=0$, the quasi-static, incremental, evolutionary problem we address is to find a parametrised map $t \mapsto y_t \in X_t$, such that~\eqref{eq:variational_global_ineq} is satisfied.
 
 
-PERTURBATIONS, DIRECTIONAL DERIVATIVES, CONSEQUENCES OF MINIMALITY
+% PERTURBATIONS, DIRECTIONAL DERIVATIVES, CONSEQUENCES OF MINIMALITY
 
 
 Equilibrium equations of the system are obtained as first order necessary conditions for the minimality of the total energy of the structure, subject to the imposed displacements at the ends of the film.
@@ -210,13 +212,13 @@ By using standard arguments of the calculus of variations, localising the integr
 \end{eqnarray}
 % proceeding with the evaluation of the equilibrium configuration via the Euler-Lagrange equations
 \added[id=ALB]{
-    This differential system is equipped with essential kinematic boundary conditions $u(0) = \subsu(0, t), u(1) = \subsu(1, t)$, whereas conditions on the internal field $\alpha'(0)=\alpha'(1)=0$ naturally follow by minimality.
+    This differential system is equipped with essential kinematic boundary conditions $u(0) = \subsu(0, t), u(1) = \subsu(1, t)$. Conversely, conditions on the internal field $\alpha'(0)=\alpha'(1)=0$ naturally follow by minimality.
 % When the order parameter is reversible, the space of admissible perturbations is the homogeneous space associated to $X_t$, that is $V_0:= H^1_0((0,1))\times  H^1((0,1))$.
 Notice that the choice of boundary conditions for displacements compatible with the substrate's deformation implies that the pair $\yhom:=(u_h(x), \alpha_h)$ given by $u_h(x)\equiv \subsu(x, t)$\comment[id=ALB]{notation $
 \bar u_t$} and $\alpha_h$ a load-dependent constant to identify, is always (the unique homogenous) solution to the first order equilibrium equations. This makes it immediate to identify the fundamental homogeneous solution branch $t \mapsto \yhom$ and to decouple the elasticity problem from the  evolution of damage. 
 %  driving stress softening.
 }
-Therefore, solving~\eqref{auto1} for states such that $u''(x)=\alpha'(x)= 0, \, \forall x\in (0, 1)$ identifies the components of the homogeneous solution
+Therefore, the solution to~\eqref{auto1} for states such that $u''(x)=\alpha'(x)= 0, \, \forall x\in (0, 1)$ is the homogeneous branch
 %  $y_h = (u_h, \alpha_h)$ whose  read 
 \begin{equation}
 u_h(x) =  \frac{\bar \epsilon_t}{2}(2x-1),\qquad\alpha_h = \frac{\Bar{\epsilon_t}^2}{2 + \Bar\epsilon_t^2}\label{eq:homo1}.
@@ -225,8 +227,7 @@ u_h(x) =  \frac{\bar \epsilon_t}{2}(2x-1),\qquad\alpha_h = \frac{\Bar{\epsilon_t
 \added[id=ALB]{
 Notice that,  
 THE CRITICAL DAMAGE LOAD COMPUTED IS A CONSEQUENCE OF FIRST ORDER CONDITIONS, NAMELY.
-by our choice to model the material through a quadratic term dissipation term $\homogdiss(\alpha)$, IN OUR MODELS
-damage necessarily starts as soon as $t>0$.}
+by our choice to model the material through a quadratic dissipation term $\homogdiss(\alpha)$, IN OUR softening MODEL damage necessarily starts as soon as $t>0$.}
 The effective {total} energy along the {homogeneous} branch reads  
 \begin{equation}
     \label{eq:energy_homogeneous}
@@ -254,7 +255,7 @@ To assess the incremental stability of the homogeneous solution in the reversibl
 \end{equation}
 % \comment[id=ALB]{notation $w\mapsto \beta$} 
 which is well defined for perturbations $(v, \beta)\in X_0$.
-{We} extract information on the onset of instability by seeking a solution given by a Fourier series expansion of the fields $v$ and $w$ in \eqref{hessian22}, such that $v(x)=\sum_{n=1}^{\infty} a_{n} \sin \left(n \pi x+\phi_{n}\right), \quad w(x)=\sum_{n=1}^{\infty} b_{n} \cos \left(n \pi x+\psi_{n}\right)$. Then, we observe that, thanks to boundary conditions, $\psi_{n}=\phi_{n}=0$ for all natural $n$. The stability condition~\eqref{eqn:linear_second_order_stability}  takes the form:
+{We} extract information on the onset of instability  seeking a solution in Fourier series of the fields $v$ and $w$ in \eqref{hessian22}, such that $v(x)=\sum_{n=1}^{\infty} a_{n} \sin \left(n \pi x+\phi_{n}\right), \quad w(x)=\sum_{n=1}^{\infty} b_{n} \cos \left(n \pi x+\psi_{n}\right)$. Then, we observe that, thanks to boundary conditions, $\psi_{n}=\phi_{n}=0$ for all natural $n$. The stability condition~\eqref{eqn:linear_second_order_stability}  takes the form:
 \begin{align}\left[ a_n \quad b_n \right] \mathcal{H} \left[ \begin{array}{c} a_n \\ b_n \end{array} \right]=\left[ a_n \quad b_n \right]\left(
 \begin{array}{cc}
 \soften(\alpha)(n\pi)^2+\elastell^{-2}  & \frac{\partial \soften}{\partial \alpha}\bar\epsilon(n\pi)  \\
@@ -265,7 +266,7 @@ which is well defined for perturbations $(v, \beta)\in X_0$.
 By substituting the homogeneous solution $\alpha_h$ into \eqref{hessian1}, we compute $\det \mathcal{H}$ as a function of $\bar \epsilon$ and $n$, which is depicted in Figure~\ref{fig:hessian1}. The calculations are performed for the parameter values \replaced[id=ALB]{$\damagell=0.16$}{$\damagell=0.158114$} and $\elastell=0.34$.
 \added[id=ALB]{
     % Interpretation of the image: 
-The figure represents, for a given load $\bar \epsilon$, the wavenumber $n(\bar \epsilon)\in \mathbb N$ of possible energy-decreasing damage bifurcations. For an increasing loading history $\bar \epsilon_t\nearrow$, the wavenumber is non monotonic.}
+The figure represents, for a given load $\bar \epsilon$, the wavenumber $n(\bar \epsilon)\in \mathbb N$ of possible energy-decreasing damage bifurcations. For an increasing loading history $\bar \epsilon_t\nearrow$, the wavenumber is non-monotonic.}
 In Fig. \ref{fig:hessian1}(a), the locus $\det \mathcal H=0$ forms closed loops, indicative of an elastic background's influence\comment[id=ALB]{Expand}. Notably, a re-entry behavior of the affine configuration is discernible, marked by the emergence of two critical strains denoted as $\bar\epsilon^*$ and $\bar\epsilon^{**}$ (WITH $\bar\epsilon^* < \bar\epsilon^{**}$), representing the lower and upper stability limits for the homogeneous state. These critical points are highlighted by red and green dots in Fig. \ref{fig:hessian1}(a). The critical wavenumber $n_c$ for the lower limit $n_c(\bar{\epsilon}^*)$    differs from the critical wavenumber for  upper limit $n_c(\bar{\epsilon}^{**})$. Finally, we remark that closed-form analytical solutions can be provided for the critical wavenumber and critical strains and the parametric dependence of the corresponding bifurcation thresholds can be obtained, as detailed in \cite{Salman2021-mn}.
 
 
@@ -366,7 +367,7 @@ Here, $\phi_t$ is the scalar function associated to the variation of elastic ene
 %  Here, $\phi_t$ is the energy variation with respect to perturbations of the order parameter (from a given damage level $\alpha_t$) and is interpreted as an energy release rate. 
 Consequently, $\phi_t(0)$ is 
 % the total energy released by the system from its sound state
-the variation of the  energy density at equilibrium for the undamaged structure, and all equilibrium solutions $u_t$ such that $-\phi_t(0) > 0$ belong to the interior of the damage yield surface for the sound structure. The equality $-\phi_t(0) = 0$, conversely, identifies the attainment of the damage criterion for the sound structure, or equivalently, that the state $(u_t, 0)$ has reached, from the interior, the boundary of the (damage-dependent) elastic domain. 
+the variation of the  energy density at equilibrium for the undamaged structure, and all equilibrium solutions $u_t$ such that $-\phi_t(0) > 0$ belong to the interior of the damage yield surface for the sound structure. The equality $-\phi_t(0) = 0$, conversely, indicates that the damage criterion has been attained by the sound structure, or equivalently, that the state $(u_t, 0)$ has reached, from the interior, the boundary of the (damage-dependent) elastic domain. 
 % 
 % 
 % 
@@ -440,7 +441,7 @@ Thus, the non-bifurcation condition for the homogeneous evolution reads
 \end{equation}
 which formally coincides with the classical \emph{linear stability} problem~\eqref{eqn:linear_second_order_stability} in the reversible case, yet has a different mechanical interpretation in terms of evolution rates AND uniqueness of equilibrium branches.
 Remark that, in the general case in which the damage criterion is not attained everywhere, the space of admissible perturbations for the (second order) bifurcation problem is $X_0':=H^1_0(0, 1) \times \{ \beta \in H^1(0, 1) : \delta\Psi(y_t)(0, \beta) = 0 \}$ for the stiff substrate model, and $\widetilde{X_0'}:=X_0'\times H^1_0(0,1)$ for the compliant substrate model. 
-The first load at which the bifurcation inequality~\eqref{eq:bifurcation_uniqueness} fails, namely $t_b:=\inf_t \{\delta^2 \Psi(y_h)(\zeta, \zeta) =0, \forall \zeta \in X_0 \}$ corresponds to the first  bifurcation load, namely, the load for which there exist (multiple) equilibrium curves intersecting the homogeneous branch. As a consequence, for $t\geq t_b$  the possibility exists of bifurcating away from homogeneous branch. The study of the bifurcation problem is functional to infer a partial response on the stability of the state. Indeed, if the current equilibrium branch is unique then the current state is necessarily stable. The converse is not true, however, as the existence multiple possible of bifurcation paths is not a sufficient condition exclude the stability of the current state. This holds true for the irreversible case, due to the conceptual difference between the bifurcation and the stability problems.
+The first load at which the bifurcation inequality~\eqref{eq:bifurcation_uniqueness} fails, namely $t_b:=\inf_t \{\delta^2 \Psi(y_h)(\zeta, \zeta) =0, \forall \zeta \in X_0 \}$ corresponds to the first  bifurcation load, namely, the load for which there exist (multiple) equilibrium curves intersecting the homogeneous branch. As a consequence, for $t\geq t_b$  the possibility exists of bifurcating away from homogeneous branch. The study of the bifurcation problem is functional to infer a partial response on the stability of the state. Indeed, if the current equilibrium branch is unique then, necessarily, the current state is stable. The converse is not true, however, as the existence multiple possible of bifurcation paths is not a sufficient condition exclude the stability of the current state. This holds true for the irreversible case, due to the conceptual difference between the bifurcation and the stability problems.
 
 \added[id=ALB]{
 The question of the stability of the homogeneous solution in the irreversible case, according to our energetic viewpoint, is governed by the positivity of $\delta^2 \Psi(y_t)$ on the constrained space of admissible state perturbations $K^+_0$.
@@ -448,7 +449,7 @@ The question of the stability of the homogeneous solution in the irreversible ca
 Denoting $t_s$ the load at which the homogeneous solution looses stability by analogy to the bifurcation load, namely $t_s: = \inf_t \{\delta^2 \Psi(y_t)(\zeta, \zeta) =0, \forall \zeta \in K^+_0 \}$, the set inclusion $K^+_0 \subset X_0$ implies that necessarily $t_b \leq t_s$. (EQUALITY OCCURS WHEN THE FIRST BIFURCATION MODE IS NONNEGATIVE)
 }
 \added[id=ALB]{
-This indicates a qualitative conceptual distinction between the bifurcation and the stability thresholds in the constrained case. As a consequence, a system can persist along a critical non-unique equilibrium branch, yet be stable. 
+This indicates a qualitative conceptual distinction between the bifurcation and the stability thresholds, in the irreversible case. As a consequence, a system can persist along a critical non-unique equilibrium branch, yet be stable. 
 A sufficient condition for the stability of the homogeneous state $y_h$ is given by the strict positivity  of the Hessian form, on the constrained space of admissible perturbations, namely (for the stiff substrate model)
 }
 
@@ -461,12 +462,12 @@ A sufficient condition for the stability of the homogeneous state $y_h$ is given
  \end{equation}
 and similarly for the compliant substrate model, by replacing $\Estiff$ with $\Ecompl$ and $\conespace$ with $\widetilde{\conespace}$.
 The variational ineqality above is a constrained eigenvalue problem AND A TOOL TO characterisE the stability of the state $y_h$. Its solution yields either a positive eigenpair $(\kappa, z^*)\in \mathbb{R}^+\times K^+_0$ as a sufficient condition for the stability of current state, or a pair $(\kappa, z^*)\in \mathbb{R}^-\times K^+_0$ where $\kappa$ is the local (negative) energy curvature and the eigenmode $z^*$ indicates the direction of maximum energy decrease, interpreted as the \emph{instability mode} which points the system towards an optimal direction of energy descent. 
-From the numerical standpoint, the bifurcation eigen-problem in the vector space~\eqref{eq:variational_bifurcation} may be regarded as an approximated version of the stability problem, in the time-discrete setting. As suggested in~\cite{Baldelli2021-gc} through the notion of `incremental-stability', the irreversibility constraint in the stability problem can be relaxed to a pointwise inequality with respect to the state at the previous time-step $y_-$.
+From the numerical standpoint, the bifurcation eigen-problem in the vector space~\eqref{eq:variational_bifurcation} may be regarded as an approximated version of the stability problem, in the time-discrete setting. As suggested in~\cite{Baldelli2021-gc} through the notion of `incremental-stability', the irreversibility constraint in the stability problem can be relaxed to a pointwise inequality with respect to the state at the previous time-step, denoted $y_-$.
 This allows to replace the \emph{current} state $y_h$ in the definition of the space of perturbations, with $y_-$. As a consequence, assuming that $\alpha_t$ is the equilibrium damage field solving first order optimality conditions at $t$ and that $\alpha_-$ is the solution at the previous load step, admissible perturbations for the second order problem~\eqref{eq:variational_stability} are all $y-y_-\in \conespace$. In this way, the set of perturbations is enlarged to include all sufficiently smooth functions $\beta$ (which cancel the first order term) without restriction on the sign provided that $\alpha_t(x) + \beta(x) - \alpha_-(x)\geq 0$ for all $x\in (0, 1)$.
 % 
 % $\alpha$ is admissible at $t$ only if $\alpha \in H^1(0, 1)$ and $\alpha \geq \alpha_{-}$ where $\alpha_{-}$ is the damage state at the previous load step. 
 In this way, the space of perturbation allows for (small) perturbations $\beta$ which can be negative where $\alpha_t(x)>\alpha_-(x)$. Despite the constraint, such space is a vector space and the stability problem can be solved by standard methods of linear algebra by restricting the Hessian to the set of active constraints, cf~\cite{Nocedal1999-zr}.
-In practice, the stability problem~\eqref{eq:variational_stability}, a constrained eigenvalue problem in a convex cone, is OF A DIFFERENT NATURE ALTOGETHER DUE TO THE TOPOLOGICAL DIFFERENCE OF THE UNDERLYING ENERGY SPACE. THE ASSOCIATED DISCRETE PROBLEM CAN BE numerically solved by exploiting the orthogonality between the set $\conespace$ and its dual $K^*:=\{y \in H^1(0,1): \langle x,y \rangle \leq 0, \forall x \in \conespace\}$, cf.~\cite{moreau, pinto-da-costa}.
+Conversely, the stability problem~\eqref{eq:variational_stability}, a constrained eigenvalue problem in a convex cone, is OF A DIFFERENT NATURE ALTOGETHER DUE TO THE TOPOLOGICAL DIFFERENCE OF THE UNDERLYING ENERGY SPACE. THE ASSOCIATED DISCRETE PROBLEM CAN BE numerically solved by exploiting the orthogonality between the set $\conespace$ and its dual $K^*:=\{y \in H^1(0,1): \langle x,y \rangle \leq 0, \forall x \in \conespace\}$, cf.~\cite{moreau, pinto-da-costa}.
 
 % \begin{equation}
     % H_{\conespace} = \{z\in X_0: \delta^2 \Psi(y_h)(z, z) \geq 0\}.
