--- a/paper/incl_numerics.tex
+++ b/paper/incl_numerics.tex
@@ -36,12 +36,12 @@ $\stiffmat$ and $\widetilde\stiffmat$. The explicit form of the stiffness matrix
     \stiffmat = 
     % \stiffmat^1=
     \begin{bmatrix}
-\int_0^1[ \frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j
-%+\frac{1}{\lambda_2^2}{\mathcal N}_i {\mathcal N}_j
+\int_0^1[ \frac{1}{\Lambda^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j
+%+\frac{1}{\Lambda^2}{\mathcal N}_i {\mathcal N}_j
 ] dx&
 -2\int_0^1(1-\alpha)u' {\mathcal N}'_i {\mathcal N}_j  dx\\
 -2\int_0^1(1-\alpha)u' {\mathcal N}_i {\mathcal N}'_j dx
-& \int_0^1 [ (2+u'^2){\mathcal N}_i{\mathcal N}_j +\lambda_1^2{\mathcal N}'_i{\mathcal N}'_j] dx
+& \int_0^1 [ (2+u'^2){\mathcal N}_i{\mathcal N}_j +\damagell^2{\mathcal N}'_i{\mathcal N}'_j] dx
 \end{bmatrix},
 \label{eq:stifness1}
 \end{equation}
@@ -51,17 +51,17 @@ and in the compliant substrate model it reads
     \stiffmatcompl=
     % /\stiffmat^2=
     \begin{bmatrix}
-    \int_0^1[ \frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j] dx&
+    \int_0^1[ \frac{1}{\Lambda^2}{\mathcal N}_i{\mathcal N}_j + (1-\alpha)^2{\mathcal N}'_i{\mathcal N}'_j] dx&
 -2\int_0^1(1-\alpha)u' {\mathcal N}'_i {\mathcal N}_j  dx&
--\int_0^1[\frac{1}{\lambda_2^2}{\mathcal N}_i {\mathcal N}_j]  dx\\
+-\int_0^1[\frac{1}{\Lambda^2}{\mathcal N}_i {\mathcal N}_j]  dx\\
 
 -2\int_0^1(1-\alpha)u' {\mathcal N}_i {\mathcal N}'_j dx&
- \int_0^1 [ (2+u'^2){\mathcal N}_i{\mathcal N}_j +\lambda_1^2{\mathcal N}'_i{\mathcal N}'_j] dx&
+ \int_0^1 [ (2+u'^2){\mathcal N}_i{\mathcal N}_j +\damagell^2{\mathcal N}'_i{\mathcal N}'_j] dx&
  0\\
 
--\int_0^1[\frac{1}{\lambda_2^2}{\mathcal N}_i{\mathcal N}_j ] dx
+-\int_0^1[\frac{1}{\Lambda^2}{\mathcal N}_i{\mathcal N}_j ] dx
 &0
-&\int_0^1\frac{1}{\lambda_2^2}{\mathcal N}_i {\mathcal N}_j+r_s{\mathcal N}'_i {\mathcal N}'_j  dx
+&\int_0^1\frac{1}{\Lambda^2}{\mathcal N}_i {\mathcal N}_j+r_s{\mathcal N}'_i {\mathcal N}'_j  dx
 \end{bmatrix}.
 \label{eq:stifness2}
 \end{equation}
@@ -82,17 +82,17 @@ Equilibrium branches in the phase-field model of an elastic bar on non-rigid ela
 
 We display the equilibrium branches that solve the nonlinear equations~\ref{auto1} in Fig. \ref{fig:branches-stiff}. These branches are represented in Figure~\ref{fig:branches-compliant} by plotting the energy difference $\Delta \Psi$, which represents the energy difference between the energy of the current non-affine solution and the energy of the homogeneous solution $\Psi_h(\bar{\epsilon})$ at the current value of the loading parameter $\bar\epsilon_t$. The stability of solutions is color-coded, XXXX and YYYY representing stable and unstable solutions, respectively.\comment{check palette and colour names} Stability is discerned through numerical evaluation of the smallest eigenvalue $\kappa$ of the stiffness matrix $\stiffmat$ defined in \eqref{eq:stifness1}. Eigenvalues represent the local curvatures of the energy functional, so the sign of the smallest  $\kappa$ determines the stability of the solution, with $\kappa > 0$ indicating stability and $\kappa < 0$ indicating instability.
 
-Under the LEM protocol, the system explores the fundamental branch where the homogeneous solution is stable until $\bar\epsilon^c$, identified using linear stability analysis. SEE FIGURE XXX, DISPLAYING EVOLUTION XXXX. At the critical load $\bar\epsilon^c$  at point $H$, following the first instability, a branch switching transition occurs from the trivial branch with $n = 0$ to the nontrivial equilibrium branch with $n = 3$. The ensuing non-homogeneous configuration is linearly stable, as seen in Fig. \ref{fig:branches-stiff}. We depict the lowest energy configuration on this equilibrium branch in Fig.~\ref{fig:branches-stiff} at point A, consisting of two simultaneously nucleated localized cracks, one inside the domain and one on the boundary. 
+Under the LEM protocol, the system explores the fundamental branch where the homogeneous solution is stable until $\bar\epsilon_1$, identified using linear stability analysis. SEE FIGURE XXX, DISPLAYING EVOLUTION XXXX. At the critical load $\bar\epsilon^c$  at point $H$, following the first instability, a branch switching transition occurs from the trivial branch with $n = 0$ to the nontrivial equilibrium branch with $n = 3$. The ensuing non-homogeneous configuration is linearly stable, as seen in Fig. \ref{fig:branches-stiff}. We depict the lowest energy configuration on this equilibrium branch in Fig.~\ref{fig:branches-stiff} at point A, consisting of two simultaneously nucleated localized cracks, one inside the domain and one on the boundary. 
 
 When the loading parameter $\bar{\epsilon}$ is further increased, the equilibrium configuration with $n=3$ loses linear stability at point $A'$. In Fig. \ref{fig:branches-stiff} we represent state transitions by arrows, it can be observed that under the LEM protocol, the only available transition from point $A'$ is to the branch with $n=4$, which is locally stable within at the corresponding applied strain $\bar{\epsilon}$. The minimum energy configuration on the branch with $n=4$, depicted in Fig.~\ref{fig:branches-stiff} at point $B$, consists of two cracks: one inside the domain and two on the right and left boundaries.
 
-Further increasing the load, the stability of the branch with $n=4$ is lost at point $B'$, a single available transition leads the system to the branch with $n=5$. While the branch with $n=6$ appears accessible due to its lower energy compared to the current state, it is unstable at the current value of $\bar\epsilon$. The lowest energy configurations on the branches with $n=5$ and $n=6$ are illustrated in Fig. \ref{fig:branches-stiff}(C-D). Increasing the load along the branch with $n=5$ which loses linear stability at point $C'$, a branch switching event occurs towards the branch with $n=7$, the corresponding minimum energy configuration on this branch is depicted in Fig.~\ref{fig:branches-stiff}(b). Finally, this branch reconnects to the homogeneous branch with $n=0$ at point $F$.
+Further increasing the load, the stability of the branch with $n=4$ is lost at point $B'$, a single available transition leads the system to the branch with $n=5$. While the branch with $n=6$ appears accessible due to its lower energy compared to the current state, it is unstable at the current value of $\bar\epsilon$. The lowest energy configurations on the branches with $n=5$ and $n=6$ are illustrated in Fig. \ref{fig:branches-stiff}(C-D). Increasing the load along the branch with $n=5$ which loses linear stability at point $C'$, a branch switching event occurs towards the branch with $n=7$, the corresponding minimum energy configuration on this branch is depicted in Fig.~\ref{fig:branches-stiff}(b). Finally, this branch reconnects to the homogeneous branch with $n=0$ at point $F$. Remark that, in the stiff substrate model, the LEM protocol identifies a unique evolution path, with the system having a single bifurcation option, or available branch, at each instability point.
 
 In the case of the compliant substrate model, the equilibrium branches that solve the nonlinear equations (Eq.~\ref{auto2}) are shown in Fig.~\ref{fig:branches-compliant}. 
 We again plot the energy difference $\Delta \widetilde\Psi$ between the energy of the current solution and the energy of the homogeneous solution $f^0(\bar{\epsilon}, \alpha^0(\bar{\epsilon}))$ at the current value of the loading parameter $\bar\epsilon$. 
 The stability of solutions is indicated by XXXXX and YYYYYY colors, representing stable and unstable solutions, respectively. Stability is now discerned through numerical evaluation of the smallest eigenvalue of the stiffness matrix $\stiffmatcompl$, defined in \eqref{eq:stifness2}.
 
-According to the LEM protocol with a loading history starting in the unloaded and sound configuration, the initial transition from the trivial solution to the only available branch with $n=2$ occurs at $\epsilon_c^*$, marked as point H. As illustrated in Fig. \ref{fig:branches-compliant}(b), the damage and strain profiles of the lowest energy configuration at point A is characterised by two boundary cracks. As the loading increases, the system persists on the $n=2$ branch until point $A'$ which marks an instability. The system can now access two equilibrium branches: $n=3$ and $n=4$ shown in gray and black arrows. Fig. \ref{fig:branches-compliant}(b) shows the typical damage and strain profiles on these branches. Branches $n=3$ and $n=4$ show one bulk crack plus one boundary crack, and one bulk crack plus two boundary cracks, respectively. 
+According to the LEM protocol with a loading history starting in the unloaded and sound configuration, the initial transition from the trivial solution to the only available branch with $n=2$ occurs at $\bar \epsilon_1$, marked as point $H$. As illustrated in Fig. \ref{fig:branches-compliant}(b), the damage and strain profiles of the lowest energy configuration at point $A$ is characterised by two boundary cracks. As the loading increases, the system persists on the $n=2$ branch until point $A'$ which marks an instability. The system can now access two equilibrium branches: $n=3$ and $n=4$ shown in gray and black arrows. Fig. \ref{fig:branches-compliant}(b) shows the typical damage and strain profiles on these branches. Branches $n=3$ and $n=4$ show one bulk crack plus one boundary crack, and one bulk crack plus two boundary cracks, respectively. 
 
 The choice of the subsequent branch transition at point $A'$ will dictate the ensuing crack growth. On branches with $n=3$ and $n=4$, at the instability points $B'$ and $C'$, the system will once again encounter two available equilibrium branches. From $n=3$ branch  at point $B'$, the system can transition to either the $n=4$ or $n=5$ branch. Opting for the $n=4$ branch, the subsequent branch selection occurs at point $C'$, offering branches with $n=6$ or $n=5$. Notably, the $n=5$ branch smoothly reconnects with the trivial solution at point $F$. However, the $n=6$ branch experiences another instability at point $D'$ before rejoining the trivial solution. 
 
@@ -119,13 +119,13 @@ Recall that quasi-Newton algorithms only evaluate the function value and its gra
 \begin{equation}
     {\bf R} =
     %  {\bf R}^1=
-     \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_0) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i ]dx,\label{residual1}
+     \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_0) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\damagell^2\alpha'\mathcal{N}'_i ]dx,\label{residual1}
 \end{equation}
 in the stiff model and 
 \begin{equation}
     \widetilde{{\bf R}}= 
     % {\bf R}^2=
-    \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_s) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\lambda_1^2\alpha'\mathcal{N}'_i +r_su_s'\mathcal{N}_i]dx\label{residual2}.
+    \int_0^1 [(1-\alpha)^2u'\mathcal{N}'_i+\frac{1}{\lambda_2^2} (u-u_s) \mathcal{N}_i+\frac{1}{2}(u'^2 g'(\alpha)+h'(\alpha))\mathcal{N}_i+\damagell^2\alpha'\mathcal{N}'_i +r_su_s'\mathcal{N}_i]dx\label{residual2}.
 \end{equation}
 in the compliant substrate model. 
 
@@ -201,22 +201,23 @@ In our numerical experiments, we employ the BFGS and L-BFGS solvers from the Pyt
 %To summarize, we initially provide the algorithms with an initial guess for $\mathbf{X}^{(k)} = (\mathbf{u}^{(k)}, \alpha^{(k)})$ at a fixed value of the loading parameter $\bar\epsilon$. Additionally, we specify an initial guess for the Hessian matrix, denoted as $\mathbf{B}^{k} \in \mathbb{R}^{n \times n}$. This matrix can either be set as the identity matrix or the uncoupled stiffness matrix to ensure a symmetric and positive definite approximation. Subsequently, the quasi-Newton algorithm computes a search direction using  the analogue of the Newton equation $\mathbf{B}^{(k)} \mathbf{p}^{(k)}  = -\mathbf{R}^{(k)} $,where $\mathbf{p}^{(k)}$ denotes the search direction at stage $k$. Afterwards, it  performs a line search to minimize a function $f(h^{(k)}) = f(\mathbf{X}^{(k)} + h^{(k)} \mathbf{p}^{(k)})$ in order to find an acceptable step size $h^{(k)}$ such that $h^{(k)} \in \arg \min_{h} f$. The solution is then updated in the direction of $\mathbf{p}^{(k)}$ with the step size $h^{(k)}$. 
 
 
-In Figure \ref{fig:tempo1}(a), we present the results of our numerical experiments, overlaying solutions obtained with the quasi-Newton algorithm onto equilibrium branches determined using the pseudo-arclength continuation method described in the previous section. Fig. \ref{fig:tempo1}(b) shows the smallest eigenvalue $\kappa$ whose positivity informs on the stability of the solution. All the branch switching events are delayed in the sense they do not take place when the smallest eigenvalue of the second variation vanishes but \added[id=ALB]{only beyond the load corresponding to the eigenvalue's sign transition.}. Notably, the expected first branch switching event—from the {homogeneous} solution to the branch with \(n=3\) as outlined in the LEM protocol—did not occur at point H as anticipated. During a monotonic loading, the system remains on the trivial branch, as shown in Fig. \ref{fig:branches-stiff}(a), until it transitions to the branch with \(n=4\) at a value of the load much higher than the critical loading parameter \(\bar{\epsilon}^c\). By monitoring the smallest eigenvalue of the second energy variation at the solution, we observe that indeed the solutions computed via the quasi-Newton solver are unstable beyond \(\bar{\epsilon}^c\), which is consistent with the linear stability results for the trivial branch. A closer inspection of the solution field reveals that the quasi-Newton solutions are not homogeneous but instead exhibit a small perturbation akin to the instability mode calculated analytically (i.e., the eigenvector associated with the smallest eigenvalue). For instance, the  quasi-Newton solution before the first branch switching event is shown in inset (A') in Fig. \ref{fig:tempo1}(b), where we see that \added[id=ALB]{the equilibrium damage shows a slight oscillation } reminiscent of the eigenmode \(\alpha_n(x) \sim \cos(n\pi x)\), \comment[id=ALB]{$\alpha_n(x) \sim c+ \cos(n\pi x)$ where $c$ is an arbitrary constant and} with \(n=3\) \textbf{what does it mean?}. The state transition captured by the quasi-Newton method is the one towards the  \(n=4\) branch, with one bulk crack and two boundary cracks, see inset (B) in Fig. \ref{fig:tempo1}(b). If the transition had taken place at \(\bar{\epsilon}^c\) as anticipated by our LEM strategy, the system would have reached a configuration with two bulk cracks and one boundary crack, as shown in Fig. \ref{fig:branches-stiff}(b) inset (A).
+In Figure \ref{fig:tempo1}(a), we present the results of our numerical experiments, overlaying solutions obtained with the quasi-Newton algorithm onto equilibrium branches determined using the pseudo-arclength continuation method described in the previous section. Fig. \ref{fig:tempo1}(b) shows the smallest eigenvalue $\kappa$ whose positivity informs on the stability of the solution. All the branch switching events are delayed in the sense they do not take place when the smallest eigenvalue of the second variation vanishes but \added[id=ALB]{only beyond the load corresponding to the eigenvalue's sign transition.}. Notably, the expected first branch switching event—from the {homogeneous} solution to the branch with \(n=3\) as outlined in the LEM protocol—did not occur at point $H$ as anticipated. During a monotonic loading, the system remains on the trivial branch, as shown in Fig. \ref{fig:branches-stiff}(a), until it transitions to the branch with \(n=4\) at a value of the load much higher than the critical loading parameter \(\bar{\epsilon}^c\). By monitoring the smallest eigenvalue of the second energy variation at the solution, we observe that indeed the solutions computed via the quasi-Newton solver are unstable beyond \(\bar{\epsilon}^c\), which is consistent with the linear stability results for the trivial branch. A closer inspection of the solution field reveals that the quasi-Newton solutions are not homogeneous but instead exhibit a small perturbation akin to the instability mode calculated analytically (i.e., the eigenvector associated with the smallest eigenvalue). For instance, the  quasi-Newton solution before the first branch switching event is shown in inset (A') in Fig. \ref{fig:tempo1}(b), where we see that \added[id=ALB]{the equilibrium damage shows a slight oscillation } reminiscent of the eigenmode \(\alpha_n(x) \sim \cos(n\pi x)\), \comment[id=ALB]{$\alpha_n(x) \sim c+ \cos(n\pi x)$ where $c$ is an arbitrary constant and} with \(n=3\) \textbf{what does it mean?}. The state transition captured by the quasi-Newton method is the one towards the  \(n=4\) branch, with one bulk crack and two boundary cracks, see inset (B) in Fig. \ref{fig:tempo1}(b). If the transition had taken place at \(\bar{\epsilon}^c\) as anticipated by our LEM strategy, the system would have reached a configuration with two bulk cracks and one boundary crack, as shown in Fig. \ref{fig:branches-stiff}(b) inset (A).
 
 With continued loading, the damage increases and the system evolves along the \(n=4\) branch beyond the loading value at which stability is lost, as shown in Fig. \ref{fig:tempo1}(b). A dissipative branch switching event takes place from the current branch (\(n=4\)) at point \(B'\) to the branch with \(n=6\); see Fig. \ref{fig:tempo1}(b) and the inset C for the corresponding damage profile. The delay in bifurcation results in a branch selection event different from the one in our LEM protocol. The delays at bifurcation for the first and second branch switching events leads to a completely different evolutionary path compared to the LEM protocol until it finally reconnects with the homogeneous branch at point \(C'\).
 
-After illustrating the numerical results for the stiff substrate model, we now transition to exploring the simulation results of with an compliant elastic background. The solutions of our numerical experiments obtained from the quasi-Newton algorithm (gray dashed line) are overlaid in Fig. \ref{fig:tempo2}(a) onto equilibrium branches, while their stability is depicted in Fig. \ref{fig:tempo2}(b). Notably, we observe a delay, albeit less pronounced compared to the stiff substrate model, for the bifurcation from the trivial branch which occurrs at a value  higher than the analytically determined critical load \(\bar{\epsilon}^c\). Interestingly, the quasi-Newton method switches to the branch with $n=2$, which exhibits lower energy compared to the branch with $n=3$. This occurs  despite the delay in bifurcation because the branch  $n=3$ remains accessible for the current value $\bar\epsilon$. It's worth noting that the LEM protocol also anticipated a first branch selection event leading to the branch with $n=2$ with two boundary cracks. 
+% After illustrating the numerical results for the stiff substrate model, we now transition to exploring the simulation results of with an compliant elastic background. 
+The solutions of our numerical experiments obtained from the quasi-Newton algorithm (gray dashed line) are overlaid in Fig. \ref{fig:tempo2}(a) onto equilibrium branches, while their stability is depicted in Fig. \ref{fig:tempo2}(b). Notably, we observe a delay, albeit less pronounced compared to the stiff substrate model, for the bifurcation from the trivial branch which occurrs at a value  higher than the analytically determined critical load \(\bar{\epsilon}^c\). Interestingly, the quasi-Newton method switches to the branch with $n=2$, which exhibits lower energy compared to the branch with $n=3$. This occurs  despite the delay in bifurcation because the branch  $n=3$ remains accessible for the current value $\bar\epsilon$. It's worth noting that the LEM protocol also anticipated a first branch selection event leading to the branch with $n=2$ with two boundary cracks. 
 We again observe that, \added[id=ALB]{even before the first branch-changing event}, the quasi-Newton solution \replaced[id=ALB]{is an homogeneous state perturbed by an oscillatory term of}{deviates from the trivial branch, and the damage profile has} the form \(\sim \cos(n\pi x)\), reminiscent of the eigenmode $\alpha_n$ \comment[id=ALB]{$\alpha_n(x) \sim c+ \cos(n\pi x)$ where $c$ is an arbitrary constant and} with \(n=2\) \textbf{what does it mean?}. 
 % \added[id=ALB]{Remark: this may be due to the quasi-Newton computation which necessarily relies on an approximate positive-definite Hessian. EXPAND}
-\added[id=ALB]{These perturbations of the equilibrium profiles are negligible from the global energetic standpoint, as it can be inferred in Figure~\ref{fig:tempo2}(a), by the superposition between the energy of the computed evolution and the exact total energy of the homogeneous solution.} 
-As the load increases the system moves along the branch with $n=2$ until the stability transition at load XXX, indicated by point A'. Energy minimization brings the system to the branch $n=4$ although the branch with $n=3$ is also accessible and has lower energy. Figure~\ref{fig:tempo2}(c), displays the corresponding damage profiles before and after \added[id=ALB]{the branch} switching event  at points B' and C. The final \replaced[id=ALB]{transition}{event} before the reconnection to the homogeneous branch takes place at point C', which is also an unstable configuration. The transition brings the system to the branch $n=6$ as seen in Fig.~\ref{fig:tempo2}(b), the corresponding stable damage profile at point D is shown in Fig. \ref{fig:tempo2}(c). 
+\added[id=ALB]{These perturbations of the equilibrium profiles are negligible from the global energetic standpoint, as it can be inferred in Figure~\ref{fig:tempo2}(a), by the superposition between the energy of the computed evolution and the exact total energy of the homogeneous solution, yet may have a role in the selection of the next branch, is will be evidenced in the following.} 
+As the load increases the system moves along the branch with $n=2$ until the stability transition at load $\bar \epsilon_2$, indicated by point $A'$. Energy minimization brings the system to the branch $n=4$ although the branch with $n=3$ is also accessible and has lower energy. Figure~\ref{fig:tempo2}(c), displays the corresponding damage profiles before and after \added[id=ALB]{the branch} switching event  at points B' and C. The final \replaced[id=ALB]{transition}{event} before the reconnection to the homogeneous branch takes place at point C', which is also an unstable configuration. The transition brings the system to the branch $n=6$ as seen in Fig.~\ref{fig:tempo2}(b), the corresponding stable damage profile at point D is shown in Fig. \ref{fig:tempo2}(c). 
 
-In summary, while the results of the quasi-Newton minimization simulations exhibit overall similarities in both models, the trajectory taken by the system in the second model more closely COMPARES with the LEM protocol outlined above. This alignment can be attributed to the specific energy landscape within the second model. HOWEVER, IN CASE OF INDETERMINACY SUCH AS WHEN MULTIPLE STABLE SOLUTIONS EXIST AT A LOSS OF STABILITY, WHERE SHOULD THE SYSTEM GO?
+In summary, while the results of the quasi-Newton minimization simulations exhibit overall similarities in both models, the trajectory taken by the system in the second model more closely COMPARES with the LEM protocol outlined above. This alignment can be attributed to the specific energy landscape within the second model. IN CASE OF INDETERMINACY SUCH AS WHEN MULTIPLE STABLE SOLUTIONS EXIST AT A LOSS OF STABILITY, how to identify a direction?
 
 %: the states accessible to the system when the smallest eigenvalue vanishes remain unchanged compared to when the "delayed" branch switching occurs.
 
 \subsection{Hybrid algorithm \added[id=ALB]{(kick) for branch switching}}
-Our investigation reveals that the solutions generated by the quasi-Newton algorithms deviate from the prescribed LEM protocol outlined in the preceding sections. We observed a delayed bifurcation phenomenon and the persistence of unstable solutions, \replaced[id=ALB]{both affecting}{affect} branch selection events along the evolution.  This is indeed related to the fact that the energy landscape IS ALREADY flat when the determinant Hessian gets close to zero~\textbf{comment more}
+Our investigation shows that the solutions generated by the quasi-Newton algorithms deviate from the prescribed LEM protocol outlined in the preceding sections. We observed a delayed bifurcation phenomenon and the persistence of unstable solutions, \replaced[id=ALB]{both affecting}{affect} branch selection events along the evolution.  This is indeed related to the fact that the energy landscape IS ALREADY flat when the determinant Hessian gets close to zero. 
 \added[id=ALB]{
     Testing the energy expansion~\eqref{eqn:energy-expansion} 
     along a the direction of a bifurcation mode, that is setting $y-y_t=h w_n$, where $w_n:=(v_n, \alpha_n)(x)$ is the $n$-th eigenmode associated to the Hessian and $0<h\in \mathbb R$, we obtain that, for admissible states $y$ $\delta$-close to the equilibrium $y_t$ we can write the following lower bound}
@@ -268,7 +269,7 @@ small value of the step size \( \eta \) obtained by minimisation of \eqref{eqn:e
 
 To escape this region, one can design an iterative algorithm that repeatedly performs line searches in the current unstable direction until stability is found, iteratively flowing along the escape path. However, for the current problem, it was sufficient to take the step-size \( \eta=1 \) to escape the unstable critical states, even though this choice is suboptimal \replaced[id=ALB]{with respect to}{increases the function} \( f(\eta) \). 
 % Indeed, the essential feature of the quasi-Newton algorithm is the positive definiteness of the approximate Hessian, independent of the function's curvature (positive or negative). 
-The quasi-Newton solver starting from the perturbed state seeks a direction that will always be a descent direction. Therefore, a perturbed state obtained by taking a large step-size moves the system away from the flat region, allowing the quasi-Newton algorithm to find the next lower energy branch. It remains to be seen if this choice will work in other models or a more elaborated algorithm has to be implemented, as suggested above, which will be the subject of future work.
+The quasi-Newton solver starting from the perturbed state seeks a direction that will always be a descent direction. Therefore, a perturbed state obtained by taking a large step-size moves the system away from the flat region, allowing the quasi-Newton algorithm to find the next lower energy branch. It remains to be seen if this choice will work in other models or a more elaborated algorithm has to be implemented as suggested above, which will be the subject of future work.
 \begin{figure}
     %\centering
     \includegraphics[width=.7\textwidth]{../images/model_stiff_energy_kick_algo.pdf} \\
@@ -283,7 +284,7 @@ The quasi-Newton solver starting from the perturbed state seeks a direction that
 \subsection{\added[id=ALB]{Irreversibility and numerics} }
 \added[id=ALB]{
 To conclude this contribution and highlight the role of the irreversibility constraint on the global definition of space of perturbations, 
-we qualitatively discuss the full stability problem~\eqref{eq:variational_stability} in our simplified one-dimensional setting, for an initially undamaged thin film on a stiff substrate undergoing a homogeneous evolution, and provide an illustrative numerical computation. 
+we qualitatively discuss the full stability problem~\eqref{eq:variational_stability} in our simplified one-dimensional setting, for an initially undamaged thin film on a stiff substrate undergoing a homogeneous evolution and provide an illustrative numerical computation. 
 As a pointwise constraint, irreversibility restricts branch switching events in such a way that, e.g., the transition between branches with $n=3$ to $n=4$  is not allowed (cf. profiles in the Figure~\ref{fig:kick1} of the transition (b)$\mapsto$ (d)) because it requires a local decrease of the damage field. 
 On the flip side, irreversibility also acts as a global constraint on the perturbation space rendering the analysis more involed because of the strong nonlinearity induced.
 }
@@ -299,7 +300,7 @@ Note that the profiles of the instability modes do not reduce to a truncation (i
 In Figure~\ref{fig:irreversibility}-bottom, we plot the spectra of the Hessian operator for the bifurcation problem (with blue circles and red crosses) as well as the smallest eigenvalue in the irreversible stability problem (with losanges). 
 Note that the bifurcation spectrum is singular at $t=0$. This follows the fact that, in this model, the damage criterion is attained as soon as $t=0$, thus the space of state perturbations changes suddenly from $H^1_t((0,1)) \times \emptyset$ at $t=0$ to the full space $V_0$ for $t>0$ which includes all (sufficiently smooth) damage perturbations. Conversely, the set of admissible damage perturbations for the stability problem changes from the empty at $t=0$ set to the solid cone of smooth positive functions $\{\beta\in H^1((0,1)):\beta \geq 0\}$ only beyond the bifurcation load, that is for $t>t_b>0$.
 In the inset, we zoom on the infimum of the spectra which shows the transition from the uniqueness of the homogeneous branch (with a strictly positive Hessian in the vector space) to the existence, for $t \geq t_b$, of a multiplicity of negative eigenvalues corresponding to equilibrium curves passing through the current homogeneous state, each of which associated to a bifurcation mode.
-Despite the occurrence of negative eigenvalues for the bifurcation problem, the eigenvalues of the stability problem are all positive, indicating the sufficient condition for stability of the computed evolution.
+Despite the occurrence of negative eigenvalues for the bifurcation problem, the eigenvalues of the stability problem are all positive, a sufficient condition to ascertain the stability of the computed evolution.
 }
 % the numerical solution indicates that there exists a sequence of positive eigenvalues for the full stability problem, indicating the sufficient condition for stability of the computed evolution.
 % Note that eigenvalues of the stability problem are only computed for $t\geq t_b$, as the uniqueness of the evolution branch ensures stability for $t<t_b$.
